# terrain-adaptation-rls

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh  setup.cfg  train_all.sh
.devcontainer/: devcontainer.json
legacy/: README.md  script_audit.json
scripts/: plot_paper_benchmark_figures.py  plot_real_data_results.py  plot_vdp_reviewer_results.py  test_local.py
terrain_adaptation_rls/: eval_coeff_evolution_over_sequential.py  eval_rls_error_k_step_full_bag.py  eval_rls_error_over_seeds_sequntial.py  filter_split_data.py  num_examples_ablation.py  plot.py  plot_coeffs_and_error_animated.py  plot_coeffs_and_error_animated_jackal.py  plot_coeffs_evolution.py  plot_error_k_step.py  plot_error_k_step_with_adaptation.py  plot_error_over_seeds_all_scenes.py  plot_error_over_seeds_sequntial.py  plot_error_over_seeds_sequntial_panel.py  plot_num_examples_ablation.py  plot_rls_error_k_step.py  plot_rls_error_k_step_with_adaptation.py  plot_rls_error_k_step_with_maml.py  plot_rls_error_over_seeds.py  plot_rls_error_over_seeds_sequntial.py  plot_rls_error_over_seeds_sequntial_animated.py  plot_rls_error_over_seeds_sequntial_ice_autonomy_11.py  plot_rls_error_over_seeds_sequntial_ice_autonomy_11_animated.py  plot_rls_error_over_seeds_sequntial_panel.py  plot_scene_error.py  plot_scene_error_k_step.py  plot_scene_error_k_step2.py  plot_scene_error_over_seeds.py  plot_utils.py  pre_process_data.py  rls_experiments.py  rls_one_terrain.py  rls_two_terrains.py  shuffle_and_split_data.py  train.py  train_utils.py  train_with_localization.py
tests/: test_rk4.py  (+29 more)
(+170 files in other folders)
