[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain_adaptation_rls"
version = "0.0.1"
description = "Robot terrain adaptation usiung function encoders."
readme = "README.md"

dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "function-encoder @ git+https://github.com/ajthor/function-encoder.git",
]
